# my-bolierplates

fastapi/: .env  .gitignore  requirements.txt  start_server.py
fastapi/app/: main.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
services/express-userservice/: .env.example  .gitignore  nodemon.json  package-lock.json  package.json  server.js
services/fastapi-userservice/: .env.example  Dockerfile  docker-compose.yml  installer.sh  manage.py  pyproject.toml  requirements.txt  run.sh  start_server.py
services/fastapi-userservice/app/: main.py
services/fastapi-userservice/app/api/: admin.py  auth.py  user.py
services/fastapi-userservice/app/api/router/: routers.py
services/fastapi-userservice/app/core/: development.py  middlewares.py  oauth2.py  password.py  production.py  settings.py  smtp_email_adapter.py
services/fastapi-userservice/app/core/logging/: __init__.py  config.json
services/fastapi-userservice/app/core/management/: __init__.py
services/fastapi-userservice/app/db/: mongodb_connection.py
services/fastapi-userservice/app/db/repositories/: user.py
services/fastapi-userservice/app/exceptions/: app_exceptions.py  request_exceptions.py
services/fastapi-userservice/app/models/: user.py
services/fastapi-userservice/app/schema/: auth_schema.py  response_schema.py  user_schema.py
services/fastapi-userservice/app/services/: sendgrid_service.py  user_service.py
services/react-admin/: .env  .env.example  package-lock.json  package.json
services/react-admin-basic/: package-lock.json  package.json
ui/: .env
(+135 files in other folders)
